<resources>
    //General
    <string name="app_name">JAMP</string>
    <string name="title_activity_principal">Menu Principal</string>
    <string name="navigation_drawer_open">Abrir el menú</string>
    <string name="navigation_drawer_close">Cerrar el menú</string>
    <string name="nav_header_title">Julen</string>
    <string name="nav_header_subtitle">Julen Zarate</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    //SignUp Page
    <string name="registro_Login">Nombre Usuario</string>
    <string name="registro_Titulo">Registro</string>
    <string name="registro_FullName">Nombre y Apellidos</string>
    <string name="registro_email">Email</string>
    <string name="registro_Txoko">Id del Txoko</string>
    <string name="registro_Contraseña">Contraseña</string>
    <string name="registro_Comprobante">La contraseña debe tener minimo 8 caracteres.</string>
    <string name="show_password_2">Show Password 2</string>
    <string name="registro_Atras">Atras</string>
    <string name="loadingImage">Imagen Cargando</string>

    //LogIn Page
    <string name="registro_Registrarse">Registrarse</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="jamp">JAMP</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="email_o_contrase_a_incorrecta">Email o contraseña incorrecta</string>
    <string name="registrarse">Registrarse</string>
    <string name="ojo">Mostrar Contraseña</string>
    <string name="login">Login</string>
    <string name="passForgot">¿Ha Olvidado La Contraseña?</string>
    <string name="tutorial_Text">¿No Sabe Como Funciona La Aplicacion?</string>
    <string name="tutorial_Button">Boton del tutorial</string>

    //Navigation Drawer
    <string name="last_connection">Ultima Conexion: 10/01/1988</string>
    <string name="action_logOut">Cerrar Sesion</string>
    <string name="nav_outgoings">Gastos</string>
    <string name="nav_products">Productos</string>
    <string name="nav_telephon">Telefonos</string>
    <string name="nav_events">Eventos</string>
    <string name="nav_change_pass">Cambiar Contraseña</string>


    //Fragments
    <string name="search">Buscar Por:</string>
    //Change Password
    <string name="fragment_change_password_title">Cambiar Contraseña</string>
    <string name="fragment_change_password_actual_pass">Introduzca la contraseña actual</string>
    <string name="fragment_change_password_new_pass">Introduzca la nueva contraseña</string>
    <string name="fragment_change_password_new_pass_2">Repita la nueva contraseña</string>
    <string name="fragment_change_password_button">Cambiar</string>

    //Products
    <string name="fragment_products_search_product">Introduce el producto a buscar</string>
    <string name="fragment_products_title">Productos</string>
    <string name="fragment_products_product">Fanta de naranja</string>
    <string name="fragment_products_description">Esto es una lata de Fanta de naranja</string>
    <string name="fragment_products_price">0,50</string>
    <string name="fragment_products_product_toast">Se han encontrado los siguientes productos</string>


    //Events
    <string name="fragment_events_title">Eventos</string>
    <string name="fragment_events_search_event">Introduce el evento a buscar</string>
    <string name="fragment_events_go">Asistir al Evento</string>
    <string name="fragment_events_event_title">Fiestas de Erandio</string>
    <string name="fragment_event_event_date">25/06/2019</string>
    <string name="fragment_events_event_description">Las fiestas de erandio por san juan seran este año en la plaza mayor</string>
    <string name="fragment_events_event_price">15</string>
    <string name="fragment_events_event_toast">Se han encontrado los siguientes eventos</string>

    //expense
    <string name="fragment_expense_title">Gastos</string>
    <string name="fragment_expense_cantidad">Cantidad</string>
    <string name="fragment_expense_coin_sprite">Coin sprite</string>
    <string name="fragment_expense_month_expenses">Gastos este mes:</string>

    //telephones
    <string name="fragment_telephones_search_telephone">Introduce el telefono a buscar</string>
    <string name="fragment_telephones_titulo">Telefonos De Interes</string>
    <string name="telepizza">Telepizza</string>
    <string name="fragment_telephones_telephone_toast">Se han encontrado los siguientes telefonos</string>


    //Dialogos
    <string name="Dialogos_Ok">Ok</string>
    <string name="Dialogos_Cancelar">Cancelar</string>

    //Dialogo Solicitud De Nueva Contraseña
    <string name="Dialogo_Solicitud_Nueva_Contrasena_Title">Solicitada la nueva contraseña</string>
    <string name="Dialogo_Solicitud_Nueva_Contrasena_Content">Ha solicitado una nueva contraseña que se le mandara por email, Por Favor revise su bandeja de entrada</string>
    //Dialogo Registro
    <string name="Dialogo_Registro_Title">Se ha registrado con exito</string>
    <string name="Dialogo_Registro_Content">Por Favor, Comuniquese con el administrador del txoko para activar su cuenta</string>
    //Dialogo Productos
    <string name="Dialogo_Productos_Title">Producto Prueba</string>
    <string name="Dialogo_Productos_Content">Este es un producto de pruebaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</string>
    <string name="Dialogo_Productos_Añadir">Añadir</string>
    <string name="Dialogo_Productos_Min_Error">Introduce un valor mayor a 0</string>
    <string name="Dialogo_Productos_Max_Error">Introduce un valor menor a 25</string>
    <string name="Dialogo_Productos_Toast_1">Se ha añadido</string>
    <string name="Dialogo_Productos_Toast_2">productos de</string>
    <string name="Dialogo_Productos_Toast_3">a tus gastos mensuales.</string>
    //Dialogo Cambio Contraseña
    <string name="Dialogo_Cambio_Contraseña_Title">Contraseña Modificada</string>
    <string name="Dialogo_Cambio_Contraseña_Content">Ha modificado su contraseña, cierre sesion y vuelva ha iniciar sesion para probar su nueva contraseña</string>
    //Dialogo Asistir al evento
    <string name="Dialogo_Asistir_Al_Evento_Title">Asistir Al Evento</string>
    <string name="Dialogo_Asistir_Al_Evento_Content">Seguro que desea asistir al evento seleccionado?</string>
    <string name="Dialogo_Asistir_Al_Evento_Toast">Se ha añadido el gasto del evento a sus gastos mensuales</string>
    //Dialogo Cerrar Sesion
    <string name="Dialogo_LogOut_Title">¿Desea Cerrar Sesion?</string>
    <string name="Dialogo_LogOut_yes">Si</string>
    <string name="Dialogo_LogOut_no">No</string>

    //Error Messages
    <string name="user_login_exist_error">Ese nombre de usuario ya existe</string>
    <string name="conection_error">Ha habido un error con la conexion</string>
    <string name="other_error">Ha habido un error</string>
    <string name="field_requiered_error">Campo Requerido</string>
    <string name="max_lenght_error">El Campo Debe Ser Menor De 255</string>
    <string name="pass_equals_error">Las Contraseña Deben Ser Iguales</string>
    <string name="pass_min_lenght_error">La Contraseña Debe Ser Mayor De 8</string>
    <string name="format_error">El formato no es el correcto</string>
    <string name="no_hay_conexion">Error, No hay conexion</string>
    <string name="user_need_error">Debe Introducir el usuario para cambiar la contraseña</string>
    <string name="actual_pass_and_new_pass_equals_error">La nueva contraseña no puede ser la misma que la contraseña actual</string>
    <string name="new_pass_equals_error">Las Contraseña Deben Ser Iguales</string>
    <string name="null_pointer_exception_error">ui ui ui, Null Pointer Exception...</string>
    <string name="telephone_search_error">No Se Han Encontrado Telefonos</string>
    <string name="product_search_error">No Se Han Encontrado Productos</string>
    <string name="event_search_error">No Se Han Encontrado Eventos</string>
  
    //Recursos
    <string name="country_coin">€</string>
    <string name="IP">192.168.1.1</string>
    <string name="PORT">5000</string>
    <string name="MongoDBIP">10.22.82.135</string>
    <string name="MongoDBPort">27017</string>
    <string name="MongoDBName">jamp</string>
    <string name="MongoDBCollectionName">telephones</string>




</resources>
